Version 0.6pre1 -- DEVELOPMENT
------------------------------
- Fixed some security problems with uploading attachments
- Added Catalan translation from Josep Sanz <jsanz@fa.upc.es>


Version 0.5 -- September 25, 2000 
---------------------------------
- Fixed some problems with downloading attachments in IE
- If no date is set in header, we take internal date of the imap server
- Fixed some lingering bugs in mime parsing 
- Searching specifies CHARSET option
- Security fixes
- Fixed hyperlink rendering problems

Version 0.5pre2 -- September 6, 2000 
------------------------------------
- Added quite a few new themes
- Fixed double folder problem on some servers
- Using encryption for passwords
- Added a patch from Bill Thousand to allow easier virtual domains
- Security updates with attachments
- Added more hooks for plugins, updated plugin.txt
- Improved HTML address book
- Fixed bugs in parsing email addresses in smtp.php
- Applied fixes for Courier IMAP server (by Andreas Dahl)
- Fixed some buggy IMAP handling
- Improved word wrapping
- Fixed bugs with adding and not adding backslashes
- Made message highlighting case insensative
- Added Korean translation from Jong-II Kim <aporie@netian.com>
- Added Italian translation from Aldo Moresco <moresco@idcm.it>
- Added French translation from Ali Nedjimi <lrdfrx@club-internet.fr>

Version 0.5pre1 -- August 9, 2000 
---------------------------------
- Searching folders functionality added 
- Date display now is similar to Netscape Messenger
- Many bugs have been reported to the list, and been squashed
- Help system developed 
- Folder list now shows configurable details about messages
- It is now possible to select multiple subscribes/unsubscribes
- Removed a bunch of annoying "success" screens, improved navigation
- Better IMAP session handling
- Redid the options section and split it into different parts
- Added "view all headers" option when reading a message