@@ -1,5 +1,6 @@
 Version 0.6pre1 -- DEVELOPMENT
 ------------------------------
+- Made message index order customizable (from, subject, date) can be (date, from, subject)
 - Fixed some security problems with uploading attachments
 - Added Catalan translation from Josep Sanz <jsanz@fa.upc.es>
 
